fix tags top margin on mobile phones

--- a/static/main.css
+++ b/static/main.css
@@ -3512,4 +3512,8 @@
     float: none;
     margin-top:20px !important;
   }
+
+  .image.featured{
+    padding-bottom:20px !important;
+  }
 }
